--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
       href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1711487126380737"
+     crossorigin="anonymous"></script>
+     
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
